--- a/nginx.conf
+++ b/nginx.conf
@@ -58,11 +58,11 @@ http {
     server {
         listen 443 ssl;
         http2 on;
-        server_name api.eusdr.com;  # Replace with your actual domain
+        server_name api.aizenocr.com;  # Replace with your actual domain
         
         # SSL Certificate paths (mounted from /etc/letsencrypt)
-        ssl_certificate /etc/letsencrypt/live/api.eusdr.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/api.eusdr.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/api.aizenocr.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/api.aizenocr.com/privkey.pem;
         
         # SSL Configuration
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -161,7 +161,7 @@ http {
     # HTTP to HTTPS Redirect
     server {
         listen 80;
-        server_name api.eusdr.com ;  # Replace with your actual domain
+        server_name api.aizenocr.com ;  # Replace with your actual domain
         
         # Allow Let's Encrypt validation
         location /.well-known/acme-challenge/ {
