--- a/nginx.conf
+++ b/nginx.conf
@@ -39,9 +39,11 @@ http {
         application/atom+xml
         image/svg+xml;
 
-    # Rate limiting zones
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=api_burst:10m rate=30r/m;
+    # Rate limiting zones - improved for better protection
+    # API zone: 10 requests/second with burst (reasonable for real users, kills scanners)
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    # Strict zone: 5 requests/second for blocking paths (very restrictive)
+    limit_req_zone $binary_remote_addr zone=strict:10m rate=5r/s;
     
     # Connection limiting (DDoS protection)
     limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
@@ -95,41 +97,81 @@ http {
         # SECURITY: HSTS (HTTP Strict Transport Security)
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         
-        # SECURITY: Block common attack paths
-        location ~ /\. {
-            deny all;
-            access_log off;
-            log_not_found off;
-        }
-        
-        location ~ ^/(\.git|\.env|\.htaccess|\.htpasswd|wp-admin|phpmyadmin|admin) {
-            deny all;
-            access_log off;
-            log_not_found off;
-            return 404;
+        # SECURITY: Block invalid HTTP methods early
+        if ($request_method !~ ^(GET|POST|HEAD|OPTIONS)$) {
+            return 405;
         }
 
-        # Health check endpoint (no auth required)
-        location /health {
+        # SECURITY: Block common "steal secrets" paths explicitly (return 444 = drop connection)
+        location ~* (^|/)\.(env|git|svn|hg|htaccess|htpasswd|DS_Store|idea|vscode) {
+            limit_req zone=strict burst=5 nodelay;
+            access_log off;
+            log_not_found off;
+            return 444;
+        }
+        
+        location ~* /(backup|backups|dump|dumps|db|sql|tar|zip|old|bak|swp|tmp|temp)/ {
+            limit_req zone=strict burst=5 nodelay;
+            access_log off;
+            log_not_found off;
+            return 444;
+        }
+        
+        location ~* \.(log|sql|bak|old|swp|tmp|tar|gz|zip|rar)$ {
+            limit_req zone=strict burst=5 nodelay;
+            access_log off;
+            log_not_found off;
+            return 444;
+        }
+        
+        location ~* ^/(wp-admin|wp-login|phpmyadmin|admin|administrator|login|api/login|\.well-known/security\.txt) {
+            limit_req zone=strict burst=5 nodelay;
+            access_log off;
+            log_not_found off;
+            return 444;
+        }
+
+        # Fix favicon + robots spam (silent 204, no logging)
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+            return 204;
+        }
+        
+        location = /robots.txt {
+            access_log off;
+            log_not_found off;
+            return 204;
+        }
+        
+        location = /sitemap.xml {
+            access_log off;
+            log_not_found off;
+            return 204;
+        }
+
+        # Health check endpoints (no auth required, lighter rate limit)
+        location ^~ /health {
+            limit_req zone=api burst=20 nodelay;
+            limit_conn conn_limit_per_ip 5;
+            
             proxy_pass http://ocr_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Health checks don't need long timeouts
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
         }
 
-        # SECURITY: Block invalid HTTP methods
-        if ($request_method !~ ^(GET|POST|HEAD|OPTIONS)$) {
-            return 405;
-        }
-
-        # API endpoints
-        location / {
-            # SECURITY: Rate limiting with connection limits
-            limit_req zone=api burst=10 nodelay;
-            limit_req_status 429;
+        # OCR API endpoints
+        location ^~ /ocr {
+            limit_req zone=api burst=50 nodelay;
             limit_conn conn_limit_per_ip 10;
-
+            
             proxy_pass http://ocr_backend;
             
             # SECURITY: Prevent header injection
@@ -156,16 +198,83 @@ http {
             proxy_buffers 4 256k;
             proxy_busy_buffers_size 256k;
         }
+
+        # PDF Hybrid API endpoints
+        location ^~ /pdf {
+            limit_req zone=api burst=50 nodelay;
+            limit_conn conn_limit_per_ip 10;
+            
+            proxy_pass http://ocr_backend;
+            
+            # SECURITY: Prevent header injection
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Request-ID $request_id;
+            
+            # SECURITY: Remove sensitive headers
+            proxy_set_header X-Forwarded-Server "";
+            proxy_hide_header X-Powered-By;
+            proxy_hide_header Server;
+
+            # Timeout settings (PDF processing can take longer)
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 300s;
+
+            # Buffer settings for large responses
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+        }
+
+        # DEFAULT DENY: Everything else - drop connection (no response)
+        location / {
+            limit_req zone=strict burst=5 nodelay;
+            access_log off;
+            log_not_found off;
+            return 444;
+        }
     }
 
     # HTTP to HTTPS Redirect
     server {
         listen 80;
-        server_name api.aizenocr.com ;  # Replace with your actual domain
+        server_name api.aizenocr.com;
         
         # Allow Let's Encrypt validation
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
+            access_log off;
+        }
+        
+        # Block common attack paths on HTTP (before redirect)
+        location ~* (^|/)\.(env|git|svn|hg|htaccess|htpasswd) {
+            access_log off;
+            log_not_found off;
+            return 444;
+        }
+        
+        location ~* /(backup|backups|dump|dumps|db|sql|tar|zip|old|bak|swp|tmp|temp)/ {
+            access_log off;
+            log_not_found off;
+            return 444;
+        }
+        
+        # Fix favicon + robots spam on HTTP
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+            return 204;
+        }
+        
+        location = /robots.txt {
+            access_log off;
+            log_not_found off;
+            return 204;
         }
         
         # Redirect all other traffic to HTTPS
