--- a/nginx.conf
+++ b/nginx.conf
@@ -220,11 +220,9 @@ http {
             proxy_hide_header Server;
 
             # Timeout settings (PDF processing can take longer)
-            # CRITICAL: Increase client_body_timeout for large file uploads (overrides global 10s)
-            client_body_timeout 120s;  # Allow 2 minutes for file upload
             proxy_connect_timeout 30s;
-            proxy_send_timeout 60s;    # Increased from 30s for large uploads
-            proxy_read_timeout 600s;   # Increased from 300s to 10 minutes
+            proxy_send_timeout 30s;
+            proxy_read_timeout 300s;
 
             # Buffer settings for large responses
             proxy_buffering on;
