--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
     tcp_nodelay     on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-    client_max_body_size 50M;
+    client_max_body_size 100M;  # Increased from 50M for large PDFs
 
     # Gzip compression
     gzip on;
@@ -75,8 +75,8 @@ http {
         ssl_session_tickets off;
         
         # SECURITY: Request size limits
-        client_max_body_size 50M;
-        client_body_buffer_size 128k;
+        client_max_body_size 100M;  # Increased from 50M for large PDFs
+        client_body_buffer_size 512k;  # Increased from 128k for better upload handling
         client_header_buffer_size 1k;
         large_client_header_buffers 4 16k;
         
@@ -221,16 +221,18 @@ http {
 
             # Timeout settings (PDF processing can take longer)
             # CRITICAL: Increase client_body_timeout for large file uploads (overrides global 10s)
-            client_body_timeout 120s;  # Allow 2 minutes for file upload
+            client_body_timeout 300s;  # Allow 5 minutes for file upload (increased from 120s)
+            client_body_buffer_size 1M;  # Increase buffer for large uploads (overrides global 128k)
             proxy_connect_timeout 30s;
-            proxy_send_timeout 60s;    # Increased from 30s for large uploads
+            proxy_send_timeout 120s;    # Increased from 60s for large uploads
             proxy_read_timeout 600s;   # Increased from 300s to 10 minutes for job creation
 
-            # Buffer settings for large responses
+            # Buffer settings for large responses and uploads
             proxy_buffering on;
-            proxy_buffer_size 128k;
-            proxy_buffers 4 256k;
-            proxy_busy_buffers_size 256k;
+            proxy_buffer_size 256k;     # Increased from 128k
+            proxy_buffers 8 256k;       # Increased from 4 buffers
+            proxy_busy_buffers_size 512k;  # Increased from 256k
+            proxy_request_buffering on;  # Enable request buffering for large uploads
         }
 
         # DEFAULT DENY: Everything else - drop connection (no response)
