--- a/nginx.conf
+++ b/nginx.conf
@@ -232,7 +232,7 @@ http {
             proxy_buffer_size 256k;     # Increased from 128k
             proxy_buffers 8 256k;       # Increased from 4 buffers
             proxy_busy_buffers_size 512k;  # Increased from 256k
-            proxy_request_buffering on;  # Enable request buffering for large uploads
+            proxy_request_buffering off;  # Enable request buffering for large uploads
         }
 
         # DEFAULT DENY: Everything else - drop connection (no response)
